# internal/model/article.go
@@ -1,6 +1,8 @@
 package model
 
-import "Blog/pkg/app"
+import (
+	"github.com/jinzhu/gorm"
+)
 
 // Article 文章
 type Article struct {
@@ -16,7 +18,96 @@ func (a Article) TableName() string {
 	return "blog_article"
 }
 
-type ArticleSwagger struct {
-	List  []*Article
-	Pager *app.Pager
+func (a Article) Count(db *gorm.DB) (int, error) {
+	var count int
+	if a.Title != "" {
+		db = db.Where("title = ?", a.Title)
+	}
+	db = db.Where("state = ?", a.State)
+	if err := db.Model(&a).Where("is_del = ?", 0).Count(&count).Error; err != nil {
+		return 0, err
+	}
+	return count, nil
+}
+
+// Get 通过ID查找文章
+func (a Article) Get(db *gorm.DB) (*Article, error) {
+	var article Article
+	if err := db.Model(&a).First(&article).Error; err != nil {
+		return nil, err
+	}
+	return &article, nil
+}
+
+func (a Article) Create(db *gorm.DB) (*Article, error) {
+	if err := db.Create(&a).Error; err != nil {
+		return nil, err
+	}
+	return &a, nil
+}
+
+func (a Article) Delete(db *gorm.DB) error {
+	return db.Model(&a).Where("is_del = ?", 0).Delete(&a).Error
+}
+
+func (a Article) Update(db *gorm.DB, values interface{}) error {
+	if err := db.Model(&a).Where("is_del = ?", 0).Updates(values).Error; err != nil {
+		return err
+	}
+	return nil
+}
+
+type ArticleRow struct {
+	ArticleID     uint32
+	TagID         uint32
+	TagName       string
+	ArticleTitle  string
+	ArticleDesc   string
+	CoverImageUrl string
+	Content       string
+}
+
+// ListByTagID 查找标题或者所有文章
+func (a Article) ListByTagID(db *gorm.DB, tagID uint32, pageOffset, pageSize int) ([]*ArticleRow, error) {
+	fields := []string{"ar.id AS article_id", "ar.title AS article_title", "ar.desc AS article_desc", "ar.cover_image_url", "ar.content"}
+	fields = append(fields, []string{"t.id AS tag_id", "t.name AS tag_name"}...)
+
+	if pageOffset >= 0 && pageSize > 0 {
+		db = db.Offset(pageOffset).Limit(pageSize)
+	}
+	rows, err := db.Select(fields).Table(ArticleTag{}.TableName()+" AS at").
+		Joins("LEFT JOIN `"+Tag{}.TableName()+"` AS t ON at.tag_id = t.id").
+		Joins("LEFT JOIN `"+Article{}.TableName()+"` AS ar ON at.article_id = ar.id").
+		Where("at.`tag_id` = ? AND ar.state = ? AND ar.is_del = ?", tagID, a.State, 0).
+		Rows()
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+
+	var articles []*ArticleRow
+	for rows.Next() {
+		r := &ArticleRow{}
+		if err := rows.Scan(&r.ArticleID, &r.ArticleTitle, &r.ArticleDesc, &r.CoverImageUrl, &r.Content, &r.TagID, &r.TagName); err != nil {
+			return nil, err
+		}
+
+		articles = append(articles, r)
+	}
+
+	return articles, nil
+}
+
+func (a Article) CountByTagID(db *gorm.DB, tagID uint32) (int, error) {
+	var count int
+	err := db.Table(ArticleTag{}.TableName()+" AS at").
+		Joins("LEFT JOIN `"+Tag{}.TableName()+"` AS t ON at.tag_id = t.id").
+		Joins("LEFT JOIN `"+Article{}.TableName()+"` AS ar ON at.article_id = ar.id").
+		Where("at.`tag_id` = ? AND ar.state = ? AND ar.is_del = ?", tagID, a.State, 0).
+		Count(&count).Error
+	if err != nil {
+		return 0, err
+	}
+
+	return count, nil
 }
