# internal/routers/api/v1/article.go
@@ -1,6 +1,13 @@
 package v1
 
-import "github.com/gin-gonic/gin"
+import (
+	"Blog/global"
+	"Blog/internal/service"
+	"Blog/pkg/app"
+	"Blog/pkg/convert"
+	"Blog/pkg/errcode"
+	"github.com/gin-gonic/gin"
+)
 
 type Article struct{}
 
@@ -10,63 +17,170 @@ func NewArticle() Article {
 
 // Get
 // @Tags Article
-// @Summary 获取文章
-// @Produce  json
-// @Param id path int true "文章 ID"
-// @Success 200 {object} model.ArticleSwagger "成功"
+// @Summary 获取单个文章
+// @Produce json
+// @Param id path int true "文章ID"
+// @Success 200 {object} service.Article "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
-// @Router /api/v1/articles/{id} [put]
-func (a Article) Get(c *gin.Context) {}
+// @Router /api/v1/articles/{id} [get]
+func (a Article) Get(c *gin.Context) {
+	param := service.ArticleRequest{ID: convert.StrTo(c.Param("id")).MustUInt32()}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Infof("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	article, err := svc.GetArticle(&param)
+	if err != nil {
+		global.Logger.Infof("svc.GetArticle err: %v", err)
+		response.ToErrorResponse(errcode.ErrorGetArticleFail)
+		return
+	}
+
+	response.ToResponse(article)
+	return
+}
 
 // List
 // @Tags Article
 // @Summary 获取多个文章
-// @Produce  json
-// @Param name query string false "文章名称" maxlength(100)
-// @Param state query int false "状态" Enums(0, 1) default(1)
+// @Produce json
+// @Param tag_id query int false "标签ID"
+// @Param state query int false "状态"
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {object} model.ArticleSwagger "成功"
+// @Success 200 {object} service.ArticleSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles [get]
-func (a Article) List(c *gin.Context) {}
+func (a Article) List(c *gin.Context) {
+	param := service.ArticleListRequest{}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	pager := app.Pager{Page: app.GetPage(c), PageSize: app.GetPageSize(c)}
+	articles, totalRows, err := svc.GetArticleList(&param, &pager)
+	if err != nil {
+		global.Logger.Errorf("svc.GetArticleList err: %v", err)
+		response.ToErrorResponse(errcode.ErrorGetArticlesFail)
+		return
+	}
+
+	response.ToResponseList(articles, totalRows)
+	return
+}
 
 // Create
 // @Tags Article
-// @Summary 新增文章
-// @Produce  json
-// @Param name body string true "文章名称" minlength(3) maxlength(100)
-// @Param state body int false "状态" Enums(0, 1) default(1)
-// @Param created_by body string true "创建者" minlength(3) maxlength(100)
-// @Success 200 {object} model.ArticleSwagger "成功"
+// @Summary 创建文章
+// @Produce json
+// @Param tag_id body string true "标签ID"
+// @Param title body string true "文章标题"
+// @Param desc body string false "文章简述"
+// @Param cover_image_url body string true "封面图片地址"
+// @Param content body string true "文章内容"
+// @Param created_by body int true "创建者"
+// @Param state body int false "状态"
+// @Success 200 {null} string "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles [post]
-func (a Article) Create(c *gin.Context) {}
+func (a Article) Create(c *gin.Context) {
+	param := service.CreateArticleRequest{}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	err := svc.CreateArticle(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.CreateArticle err: %v", err)
+		response.ToErrorResponse(errcode.ErrorCreateArticleFail)
+		return
+	}
+
+	response.ToResponse(gin.H{})
+	return
+}
 
 // Update
 // @Tags Article
 // @Summary 更新文章
-// @Produce  json
-// @Param id path int true "文章 ID"
-// @Param name body string false "文章名称" minlength(3) maxlength(100)
-// @Param state body int false "状态" Enums(0, 1) default(1)
-// @Param modified_by body string true "修改者" minlength(3) maxlength(100)
-// @Success 200 {array} model.ArticleSwagger "成功"
+// @Produce json
+// @Param tag_id body string false "标签ID"
+// @Param title body string false "文章标题"
+// @Param desc body string false "文章简述"
+// @Param cover_image_url body string false "封面图片地址"
+// @Param content body string false "文章内容"
+// @Param modified_by body string true "修改者"
+// @Success 200 {null} string "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles/{id} [put]
-func (a Article) Update(c *gin.Context) {}
+func (a Article) Update(c *gin.Context) {
+	param := service.UpdateArticleRequest{ID: convert.StrTo(c.Param("id")).MustUInt32()}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	err := svc.UpdateArticle(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.UpdateArticle err: %v", err)
+		response.ToErrorResponse(errcode.ErrorUpdateArticleFail)
+		return
+	}
+
+	response.ToResponse(gin.H{})
+	return
+}
 
 // Delete
 // @Tags Article
 // @Summary 删除文章
 // @Produce  json
-// @Param id path int true "文章 ID"
-// @Success 200 {string} string "成功"
+// @Param id path int true "文章ID"
+// @Success 200 {null} string "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles/{id} [delete]
-func (a Article) Delete(c *gin.Context) {}
+func (a Article) Delete(c *gin.Context) {
+	param := service.DeleteArticleRequest{ID: convert.StrTo(c.Param("id")).MustUInt32()}
+	response := app.NewResponse(c)
+	valid, errs := app.BindAndValid(c, &param)
+	if !valid {
+		global.Logger.Errorf("app.BindAndValid errs: %v", errs)
+		response.ToErrorResponse(errcode.InvalidParams.WithDetails(errs.Errors()...))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	err := svc.DeleteArticle(&param)
+	if err != nil {
+		global.Logger.Errorf("svc.DeleteArticle err: %v", err)
+		response.ToErrorResponse(errcode.ErrorDeleteArticleFail)
+		return
+	}
+
+	response.ToResponse(gin.H{})
+	return
+}
